--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <button onclick="window.location.href='contact.html'" id="contact">Contact</button>
         </ul>
     </nav>
-    <main>
+    <main id="aboutmain">
     <p>Hello, my name is Emma Byblow, and I am a graphic designer from Calgary, AB, Canada. I really enjoy
         making posters and merchandise, as well as a variety of other projects. I also made this website from scratch, which was very cool. I created the custom cursor in Blender, with a purple Jello-O effect. I really like the colour purple,  
         which is where the name comes from. I am not in a cult about the colour purple, although I would not be opposed to something like that.
