--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Hello, my name is Emma Byblow, and this is my portfolio.
     
     </p>
-    <img src="_Darjeeling 1 copy.jpg" id="picture">
+    <video autoplay controls muted loop id="picture" src="landing.mp4"></video>
 </main>
 
 </body>
