--- a/port.html
+++ b/port.html
@@ -18,9 +18,9 @@
             <button onclick="window.location.href='contact.html'" id="contact">Contact</button>
         </ul>
     </nav>
-    <main id="homepage">
+    <main>
         <p>This is a collection of posters that I have made.</p>
-        <img src="_Darjeeling 1 copy.jpg" id="picture">
+        <img src="darjeeling.jpg" id="picture">
         <img src="Where_Is_My_Mind 1.jpg" id="picture">
         <img src="Where_Is_My_Mind.jpg" id="picture">
         <img src="37th.jpg" id="picture">
@@ -31,5 +31,5 @@
 
 </body>
 <footer>&copy; 2024 Emma Byblow</footer>
-<script src="index.js"></script> 
+<script src="index.js" defer></script> 
 </html>
